--- a/unis/index.html
+++ b/unis/index.html
@@ -1,5 +1,21 @@
 <h1>College Tuition Over Ten Years</h1>
-<h3>In-state Tuition at Flagship Universities</h3>
-<h3>2007-2017 </h3>
+<h3>In-state Tuition at Flagship Universities 2007-2017 </h3>
+<p>Adjusted to 2017 Dollars</p>
 <div class="chart"></div>
+<div class="key">
+  <span id="q1color" class="color">Quartile 1</span>
+  <span id="q1"></span>
+</div>
+<div class="key">
+  <span id="q2color" class="color">Quartile 2</span>
+  <span id="q2"></span>
+</div>
+<div class="key">
+  <span id="q3color" class="color">Quartile 3</span>
+  <span id="q3"></span>
+</div>
+<div class="key">
+  <span id="q4color" class="color">Quartile 4</span>
+  <span id="q4"></span>
+</div>
 <p>Data Source: <a href="https://trends.collegeboard.org/college-pricing/figures-tables/tuition-fees-flagship-universities-over-time">College Board</a></p>
